unc-sdk-macros/src/core_impl/code_generator/snapshots/init_ignore_state.snap
---
source: unc-sdk-macros/src/core_impl/code_generator/item_impl_info.rs
assertion_line: 217
expression: pretty_print_syn_str(&actual).unwrap()
---
#[cfg(target_arch = "wasm32")]
#[no_mangle]
pub extern "C" fn method() {
    ::unc_sdk::env::setup_panic_hook();
    if ::unc_sdk::env::attached_deposit().as_attounc() != 0 {
        ::unc_sdk::env::panic_str("Method method doesn't accept deposit");
    }
    #[derive(::unc_sdk::serde::Deserialize)]
    #[serde(crate = "::unc_sdk::serde")]
    struct Input {
        k: u64,
    }
    let Input { mut k }: Input = ::unc_sdk::serde_json::from_slice(
            &::unc_sdk::env::input().expect("Expected input since method has arguments."),
        )
        .expect("Failed to deserialize input from JSON.");
    let contract = Hello::method(&mut k);
    ::unc_sdk::env::state_write(&contract);
}
