unc-sdk-macros/src/core_impl/code_generator/snapshots/no_args_no_return_mut_payable.snap
---
source: unc-sdk-macros/src/core_impl/code_generator/item_impl_info.rs
assertion_line: 262
expression: pretty_print_syn_str(&actual).unwrap()
---
#[cfg(target_arch = "wasm32")]
#[no_mangle]
pub extern "C" fn method() {
    ::unc_sdk::env::setup_panic_hook();
    let mut contract: Hello = ::unc_sdk::env::state_read().unwrap_or_default();
    Hello::method(&mut contract);
    ::unc_sdk::env::state_write(&contract);
}
